# unified-runtime

./: CMakeLists.txt  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/ansible/: README.md
.github/ansible/playbooks/: install-intel-opencl-cpu.yaml  install-intel-opencl-fpgaemu.yaml  install-intel-opencl-level-zero-gpu.yaml  install-intel-tbb.yaml  remove-intel-opencl-cpu.yaml  remove-intel-opencl-fpgaemu.yaml  remove-intel-opencl-level-zero-gpu.yaml  remove-intel-tbb.yaml
.github/ansible/playbooks/tasks/: dependencies.yaml  intel-compute-runtime-package.yaml  intel-igc-package.yaml  intel-onetbb.yaml  intel-opencl-cpu.yaml
.github/workflows/: mirror-intel-llvm-commits.yml
_sources/: index.rst.txt
_sources/core/: CONTRIB.rst.txt  INTRO.rst.txt  PROG.rst.txt  api.rst.txt
cmake/: helpers.cmake
core/: CONTRIB.html  INTRO.html  PROG.html  api.html
include/: ur_api.h  ur_print.hpp
scripts/core/: Metal.rst
scripts/templates/: helper.py  index.rst.mako  mockddi.cpp.mako
source/: ur_api.cpp
source/adapters/: CMakeLists.txt
source/adapters/level_zero/: device.cpp  program.cpp
source/adapters/metal/: .clang-format  CMakeLists.txt  adapter.cpp  adapter.hpp  common.hpp  context.cpp  context.hpp  ddi.cpp  device.cpp  device.hpp  info.hpp  memory.cpp  memory.hpp  metal.cpp  platform.cpp  platform.hpp
source/adapters/mock/: ur_mockddi.cpp
source/loader/: ur_adapter_registry.hpp  ur_libapi.cpp
source/loader/layers/validation/: ur_valddi.cpp
source/loader/windows/: adapter_search.cpp
test/: CMakeLists.txt
test/adapters/level_zero/: event_cache_tests.cpp
test/conformance/: CMakeLists.txt
test/conformance/adapter/: fixtures.h  urAdapterGet.cpp  urAdapterGetInfo.cpp
test/conformance/context/: context_adapter_metal.match  urContextGetInfo.cpp
test/conformance/device/: urDeviceGet.cpp  urDeviceGetInfo.cpp
test/conformance/enqueue/: helpers.h  urEnqueueEventsWaitMultiDevice.cpp  urEnqueueKernelLaunchAndMemcpyInOrder.cpp  urEnqueueMemBufferCopy.cpp  urEnqueueMemBufferCopyRect.cpp  urEnqueueMemBufferFill.cpp  urEnqueueMemBufferMap.cpp  urEnqueueMemBufferRead.cpp  urEnqueueMemBufferReadRect.cpp  urEnqueueMemImageCopy.cpp  urEnqueueUSMFill.cpp  urEnqueueUSMFill2D.cpp
test/conformance/event/: event_adapter_metal.match  urEventGetInfo.cpp  urEventGetProfilingInfo.cpp
test/conformance/exp_command_buffer/: fill.cpp  fixtures.h
test/conformance/kernel/: urKernelGetGroupInfo.cpp  urKernelGetInfo.cpp  urKernelGetSubGroupInfo.cpp
test/conformance/memory/: memory_adapter_metal.match  urMemGetInfo.cpp  urMemImageCreateWithImageFormatParam.cpp  urMemImageGetInfo.cpp
test/conformance/platform/: fixtures.h  urPlatformGet.cpp  urPlatformGetInfo.cpp
test/conformance/program/: urMultiDeviceProgramCreateWithBinary.cpp  urProgramGetBuildInfo.cpp  urProgramGetInfo.cpp
test/conformance/queue/: queue_adapter_metal.match  urQueueGetInfo.cpp  urQueueGetNativeHandle.cpp
test/conformance/sampler/: sampler_adapter_metal.match  urSamplerGetInfo.cpp
test/conformance/source/: environment.cpp
test/conformance/testing/include/uur/: fixtures.h  utils.h
test/conformance/usm/: urUSMGetMemAllocInfo.cpp  urUSMPoolGetInfo.cpp  urUSMSharedAlloc.cpp  usm_adapter_metal.match
test/conformance/virtual_memory/: urPhysicalMemCreate.cpp  urVirtualMemGetInfo.cpp  urVirtualMemGranularityGetInfo.cpp
test/layers/validation/: fixtures.hpp
